4-Adavance/springboot-demo-service-v1.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: k8s-training
  labels:
    name: k8s-training
---
# API Version  
apiVersion: apps/v1
kind: Deployment
# Deployment metadata start
metadata:
  name: springbootdemo-deployment
  labels:
    app: springbootdemo
  namespace: k8s-training  
# Deployment metadata end
# Pod spec start    
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springbootdemo
# Pod spec end       
# template start      
  template:
    metadata:
      namespace: k8s-training
      labels:
        app: springbootdemo
    spec:
      containers:
      - name: springbootdemo
        image: lianduantraining/springbootdemo:v1
        ports:
        - containerPort: 9999
# template end 
---
apiVersion: v1
kind: Service
metadata:
  name: springbootdemo
  namespace: k8s-training
spec:
  selector:
    app: springbootdemo
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999
