4-Adavance/ingress-demo-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  namespace: k8s-training
spec:
  rules:
    - host: springbootdemo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springbootdemo
                port:
                  number: 80
